--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prepare": "husky",
     "lint": "npx eslint --max-warnings 0 \"./src/**/*.js\" \"./scripts/**/*.js\" \"./tests/**/*.js\" \"./api/**/*.js\" \"./themes/**/*.js\"",
     "bench": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config jest.bench.config.js"
+    "start": "node express.js" 
   },
   "author": "Anurag Hazra",
   "license": "MIT",
@@ -48,7 +49,6 @@
     "eslint": "^9.39.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jsdoc": "^61.1.12",
-    "express": "^5.1.0",
     "globals": "^16.5.0",
     "hjson": "^3.2.2",
     "husky": "^9.1.7",
@@ -66,6 +66,7 @@
     "emoji-name-map": "^2.0.3",
     "github-username-regex": "^1.0.0",
     "word-wrap": "^1.2.5"
+    "express": "^5.1.0",
   },
   "lint-staged": {
     "*.{js,css,md}": "prettier --write"
