--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "format:check": "prettier --check .",
     "prepare": "husky",
     "lint": "npx eslint --max-warnings 0 \"./src/**/*.js\" \"./scripts/**/*.js\" \"./tests/**/*.js\" \"./api/**/*.js\" \"./themes/**/*.js\"",
-    "bench": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config jest.bench.config.js"
-    "start": "node express.js" 
+    "bench": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config jest.bench.config.js",
+    "start": "node express.js"          
   },
   "author": "Anurag Hazra",
   "license": "MIT",
@@ -65,8 +65,8 @@
     "dotenv": "^17.2.3",
     "emoji-name-map": "^2.0.3",
     "github-username-regex": "^1.0.0",
-    "word-wrap": "^1.2.5"
-    "express": "^5.1.0",
+    "word-wrap": "^1.2.5",
+    "express": "^5.1.0"                
   },
   "lint-staged": {
     "*.{js,css,md}": "prettier --write"
